--- a/config
+++ b/config
@@ -1,24 +1,25 @@
 #!/usr/bin/env bash
 
 #####################################################################################
-## Arma3helper.sh CONFIG FILE (This will override settings made in Arma3Helper.sh) 
+## Adjust below or use the external config file
 #####################################################################################
 
 ## MAKE SURE YOU CHOOSE THE SAME PROTON VERSION AS FOR ARMA IN STEAM!!!
 # Set this to the Proton Version you are using with Arma!
-# Available versions: "7.0", "6.3", "5.13", "5.0", "4.11", "4.2", "3.16", "3.7", "Proton Experimental", "Experimental"
-# Defaults to: 7.0
+# Available versions: "8.0", "7.0", "6.3", "5.13", "5.0", "4.11", "4.2", "3.16", "3.7", "Proton Experimental", "Experimental"
+# Defaults to: 8.0
 PROTON_OFFICIAL_VERSION=""
 
 ## Path to Arma's compatdata (wineprefix)
-# Leave empty if Arma is installed in Steams default directory
+# Leave empty if Arma is installed in Steams default library
 COMPAT_DATA_PATH=""
 
 # If you have proton in a different steam library, then put the path to its steamapps folder here
-# Leave empty 
+# Leave empty if Proton is installed in Steams default library
 STEAM_LIBRARY_PATH=""
 
 # If you are using a custom proton build, then put its folder name (from inside compatibilitytools.d) here
+# Leave empty if proton 
 PROTON_CUSTOM_VERSION=""
 
 ## Esync/Fsync
